--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.16"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
